tests/expectations/compiler/finalize/increment_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372005]: Unknown function `increment`
    --> compiler-test:11:9
     |
  11 |         increment(amounts, addr, amount);
     |         ^^^^^^^^^
Warning [WPAR0370001]: The keyword `increment` is deprecated.
    --> compiler-test:11:9
     |
  11 |         increment(amounts, addr, amount);
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = Use `Mapping::{get, get_or_use, set, remove, contains}` for manipulating on-chain mappings."""]
